--- a/Qshop/Seller/templates/seller/login.html
+++ b/Qshop/Seller/templates/seller/login.html
@@ -53,6 +53,9 @@
                   <div class="col-sm-8 mb-3 mb-sm-0">
                     <input type="text" name="valid_code" class="form-control form-control-user" id="valid_code" placeholder="验证码">
                   </div>
+                  <div class="col-sm-4 mb-3 mb-sm-0">
+                    <input type="button" class="btn btn-outline-danger btn-user btn-block" onclick="get_code()" value="获取验证码">
+                  </div>
                 </div>
                 <input type="submit" value="登录" class="btn btn-primary btn-user btn-block">
 
